Correctly select default device, with fallback

--- a/src/app/device-chooser/device-chooser.component.html
+++ b/src/app/device-chooser/device-chooser.component.html
@@ -17,11 +17,10 @@
 <button class="change-device">Change camera...</button>
 
 <ul class="device-list">
-  <li *ngFor="let device of devices" (click)="setSelectedDevice(device)">{{ device.label }}</li>
-</ul>
-
-<ul class="device-list">
-  <li *ngFor="let device of $availableDevices | async" (click)="setSelectedDevice(device)"><b>{{ device.label }}</b></li>
+  <li *ngFor="let device of $deviceList | async" 
+    (click)="setSelectedDevice(device)">
+    {{ device.label }}
+  </li>
 </ul>
 
 
